Tue Jan 19 07:25:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/IDL_Test.mpc:
          Only generate the export file as part of one idl file

Tue Jan 19 07:18:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_scope.cpp
        * TAO_IDL/be/be_template_module.cpp
          Fixed warnings

Tue Jan 19 04:00:00 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * orbsvcs/tests/Simple_Naming/run_test.pl:

          Added some sleep statements to allow this test to pass on the
          iPhone Simulator.

Tue Jan 19 03:50:44 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * orbsvcs/tests/ImplRepo/run_test.pl:

          Increase the sleep() value to allow this test to pass on the
          iPhone Simulator.

Tue Jan 19 03:43:50 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * orbsvcs/tests/CosEvent/Timeout/run_test.pl:

          Added some sleep statements to allow this test to pass on the
          iPhone Simulator.

Mon Jan 18 19:34:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_valuebox/field_ci.cpp
        * TAO_IDL/be/be_visitor_valuebox/union_member_ci.cpp
        * TAO_IDL/be_include/be_visitor_valuebox/field_ci.h
        * TAO_IDL/be_include/be_visitor_valuebox/union_member_ci.h
          Merged revision 88580-88605 from idl3_plus_backend2 to svn head

Mon Jan 18 14:23:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_uses.cpp:
          Layout change

        * TAO_IDL/be/be_visitor_root/root_ex_idl.cpp:
          Const change

Mon Jan 18 13:55:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be_include/be_operation_strategy.h:
          Fixed typo in comment

        * TAO_IDL/be/be_visitor_ami4ccm_pre_proc.cpp:
          Generate local interfaces

Mon Jan 18 13:16:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_ami_pre_proc.cpp: