@@ -1,3 +1,14 @@
+Tue Jan 19 08:44:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_codegen.cpp:
+          Simplification
+
+        * TAO_IDL/be/be_interface.cpp:
+          Generate implied AMI4CCM node
+
+        * TAO_IDL/be/be_produce.cpp:
+          Do CCM preprocessing after AMI4CCM
+
 Tue Jan 19 07:25:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/IDL_Test/IDL_Test.mpc:
